# Chess

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
inc/mygame/application/: Application.hpp  IApplication.hpp  fwd.hpp
inc/mygame/chess/: ChessApplication.hpp
inc/mygame/chess/app/: ChessApplication.hpp
inc/mygame/chess/board/: Square.hpp
inc/mygame/chess/figure/: BishopFigure.hpp  FigureBase.hpp  KingFigure.hpp  KnightFigure.hpp  PawnFigure.hpp  QueenFigure.hpp  RookFigure.hpp
inc/mygame/chess/movement/: BishopMoveChecker.hpp  CombinedMoveChecker.hpp  CombinedMoveCheckerBuilder.hpp  IMoveChecker.hpp  KingMoveChecker.hpp  KnightMoveChecker.hpp  PawnMoveChecker.hpp  RookMoveChecker.hpp  fwd.hpp
inc/mygame/chess/player/: IPlayer.hpp  Player.hpp
inc/mygame/chess/table/: Board.hpp  BoardSetter.hpp  CapturedFiguresArea.hpp  File.hpp  Rank.hpp  Table.hpp
inc/mygame/temp/: Dummy.hpp  IDummy.hpp
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  CMakeLists.txt
src/chess/: CMakeLists.txt  ChessApplication.cpp
src/chess/app/: CMakeLists.txt  ChessApplication.cpp
src/chess/board/: CMakeLists.txt  Square.cpp
src/chess/figure/: BishopFigure.cpp  CMakeLists.txt  FigureBase.cpp  KingFigure.cpp  KnightFigure.cpp  PawnFigure.cpp  QueenFigure.cpp  RookFigure.cpp
src/chess/movement/: BishopMoveChecker.cpp  CMakeLists.txt  CombinedMoveChecker.cpp  CombinedMoveCheckerBuilder.cpp  KingMoveChecker.cpp  KnightMoveChecker.cpp  PawnMoveChecker.cpp  RookMoveChecker.cpp
src/chess/player/: CMakeLists.txt  Player.cpp
src/chess/table/: Board.cpp  BoardSetter.cpp  CMakeLists.txt  CapturedFiguresArea.cpp  File.cpp  Rank.cpp  Table.cpp
src/temp/: CMakeLists.txt  Dummy.cpp
test/: CMakeLists.txt
test/ut/: CMakeLists.txt  main.cpp
test/ut/mocks/: IDummyMock.hpp
test/ut/stubs/: MoveCheckerStub.hpp
test/ut/tests/: CMakeLists.txt
test/ut/tests/chess/: CMakeLists.txt
test/ut/tests/chess/movement/: BishopMoveCheckerTests.cpp  CMakeLists.txt  CombinedMoveCheckerTests.cpp  KingMoveCheckerTests.cpp  KnightMoveCheckerTests.cpp  PawnMoveCheckerTests.cpp  RookMoveCheckerTests.cpp
test/ut/tests/chess/table/: BoardSetterTests.cpp  CMakeLists.txt  CapturedFiguresAreaTests.cpp  FileTests.cpp  RankTests.cpp
test/ut/tests/temp/: CMakeLists.txt  DummyTest.cpp
